updated stylesheet to solve overflow problem

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -1,7 +1,9 @@
 html, body{
     background-color: black;
+    margin-left: 0;
+
 }
-h1{
+#LPh1{
     color: grey;
     font-size: 6em;
     background-color: black;
@@ -12,7 +14,18 @@ h1{
     margin-top: 0px;
     text-shadow: 1px 1px 1px #fff;
     border-radius: 7px;
-
+}
+h1{
+    color: grey;
+    font-size: 4em;
+    background-color: black;
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 0;
+    margin-top: 0px;
+    text-shadow: 1px 1px 1px #fff;
+    border-radius: 7px;
 }
 .LandingPage{
     /* border: 5px solid red; */
@@ -37,9 +50,10 @@ h1{
     box-shadow: 0px 0px 2px #fff;
     color: lawngreen;
     font-size: 17rem;
+    overflow: hidden;
 }
 small{
-    font-size: 1.5rem;
+    font-size: 1rem;
 }
 .middleSqaure{
     width: 200vw;
@@ -61,7 +75,7 @@ small{
     margin-bottom: 1vh;
     box-shadow: 0px 0px 2px #fff;
     color: lawngreen;
-    font-size: 3em;
+    font-size: 2em;
 }
 
 
@@ -80,6 +94,7 @@ small{
     /* border: 5px solid pink; */
     height: 90%;
     scroll-snap-align: start;
+    overflow: scroll;
 }
 #imgEL{
     width: 25vw;
@@ -91,16 +106,19 @@ small{
     border: 5px solid purple;
     height: 90%;
     scroll-snap-align: start;
+    overflow: hidden;
 }
 .FRandF3{
-    /* border: 5px solid crimson; */
+    border: 5px solid crimson;
     height: 90%;
     scroll-snap-align: start;
+    overflow: scroll;
 }
 .Formula1{
     /* border: 5px solid grey; */
     height: 90%;
     scroll-snap-align: start;
+    overflow: hidden;
 }
 .CarouselF1{
     /* border: 5px dashed black; */
@@ -111,6 +129,7 @@ small{
     /* scroll-behavior: smooth;
     scroll-snap-type: x mandatory;
     overflow-x: scroll; */
+    overflow: hidden;
 }
 h2{
     color: lawngreen;
@@ -119,13 +138,15 @@ h2{
 .Mclaren{
     border: 5px dashed orange;
     width: 100%;
+    overflow: hidden;
 }
 .Mercedes{
-    /* border: 5px dashed silver; */
+    border: 5px dashed orange;
     width: 100%;
     overflow-y: scroll;
     scroll-behavior: smooth;
     padding: 3px;
+    overflow: scroll;
 }
 h3{
     color: lawngreen;
@@ -153,7 +174,8 @@ section{
     background-color: grey;
     position: fixed;
     bottom: 0;
-    width: 100%;
+    width: 100vw;
+    margin-left: 0%;
     /* justify-content: space-evenly; */
     /* display: flex; */
 }
